# create_modern_fastapi

./: CLAUDE.md  README.md  copier.yml  pyproject.toml
.github/workflows/: publish.yml
src/create_modern_fastapi/commands/: create.py
src/create_modern_fastapi/template/: .env.example  justfile  main.py  pyproject.toml.jinja  ruff.toml
src/create_modern_fastapi/template/migration/: env.py
src/create_modern_fastapi/template/src/: container.py
src/create_modern_fastapi/template/src/domain/exceptions/: auth.py  core.py
src/create_modern_fastapi/template/src/modules/: base_routes.py
src/create_modern_fastapi/template/src/presentation/: app.py
src/create_modern_fastapi/template/tests/: conftest.py
template/: copier.yml
template/{{project_name}}/: .coveragerc  .env.example  .gitignore  justfile  main.py  pyproject.toml.jinja  uv.lock.jinja
template/{{project_name}}/migration/: env.py
template/{{project_name}}/src/: config.py
template/{{project_name}}/src/domain/entities/: doc.py
template/{{project_name}}/src/domain/exceptions/: core.py  repository.py
template/{{project_name}}/src/infrastructure/database/: database.py  interface.py
template/{{project_name}}/src/presentation/: app.py
template/{{project_name}}/src/presentation/core/: error_handler.py
template/{{project_name}}/src/presentation/routes/: app_routes.py
template/{{project_name}}/src/presentation/schemas/: app.py  core.py
template/{{project_name}}/tests/: utils.py
template/{{project_name}}/tests/clean/: test_architecture.py  test_dependency.py
(+16 files in other folders)
