[project]
name = "create-modern-fastapi"
version = "0.4.0"
description = "A CLI tool to create a FastAPI project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
]


[project.scripts]
create-modern-fastapi = "create_modern_fastapi.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = ["src/create_modern_fastapi"]

[tool.hatch.build.targets.wheel.force-include]
"src/create_modern_fastapi/template" = "create_modern_fastapi/template"