[project]
name = "create-modern-fastapi"
version = "0.4.3"
description = "A CLI tool to create a FastAPI project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
]


[project.scripts]
create-modern-fastapi = "create_modern_fastapi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/create_modern_fastapi"]